force-app/main/default/objects/Email_Assignment__c/Email_Assignment__c.object-meta.xml
<CustomObject>
    <label>Email Assignment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Email Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>