force-app/main/default/objects/Email_Assignment__c/fields/Inbox__c.field-meta.xml
<CustomField>
    <fullName>Inbox__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inbox</label>
    <referenceTo>Email_Config__c</referenceTo>
    <relationshipLabel>Email Assignments</relationshipLabel>
    <relationshipName>Inbox</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>