force-app/main/default/objects/Email_Assignment__c/fields/Inbox_Entity__c.field-meta.xml
<CustomField>
    <fullName>Inbox_Entity__c</fullName>
    <formula>TEXT(Inbox__r.Entity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inbox Entity</label>
    <type>Text</type>
</CustomField>